:construction: :sparkles: Created camera intrinsic calibration widget

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -201,6 +201,7 @@ set (SRCS ${SRCS}
 	src/app/main.cpp
 
 	src/app/gui/automatedcolorcalibwidget.cpp
+	src/app/gui/camera_intrinsic_calib_widget.cpp
 	src/app/gui/cameracalibwidget.cpp
 	src/app/gui/colorpicker.cpp
 	src/app/gui/glLUTwidget.cpp
@@ -241,6 +242,7 @@ qt4_wrap_cpp (MOC_SRCS
 	src/app/capture_thread.h
 
 	src/app/gui/automatedcolorcalibwidget.h
+	src/app/gui/camera_intrinsic_calib_widget.h
 	src/app/gui/cameracalibwidget.h
 	src/app/gui/glLUTwidget.h
 	src/app/gui/glwidget.h
